tests/ui/where-clauses/higher-ranked-fn-type.verbose.stderr
error[E0277]: the trait bound `for<Region(BrNamed(DefId(0:6 ~ higher_ranked_fn_type[9e51]::called::'b)))> fn(&'^1_0.Named(DefId(0:6 ~ higher_ranked_fn_type[9e51]::called::'b)) ()): Foo` is not satisfied
  --> $DIR/higher-ranked-fn-type.rs:20:5
   |
LL |     called()
   |     ^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `for<Region(BrNamed(DefId(0:6 ~ higher_ranked_fn_type[9e51]::called::'b)))> Foo` is not implemented for `fn(&'^1_0.Named(DefId(0:6 ~ higher_ranked_fn_type[9e51]::called::'b)) ())`
help: this trait has no implementations, consider adding one
  --> $DIR/higher-ranked-fn-type.rs:6:1
   |
LL | trait Foo {
   | ^^^^^^^^^
note: required by a bound in `called`
  --> $DIR/higher-ranked-fn-type.rs:12:25
   |
LL | fn called()
   |    ------ required by a bound in this function
LL | where
LL |     for<'b> fn(&'b ()): Foo,
   |                         ^^^ required by this bound in `called`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
